# xenia-server

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/xenia-capture/: Cargo.toml
crates/xenia-capture/src/: lib.rs
crates/xenia-peer/: Cargo.toml
crates/xenia-peer-core/src/: frame.rs  lib.rs
crates/xenia-peer/src/: main.rs
crates/xenia-server-core/: Cargo.toml
crates/xenia-server-core/src/: frame.rs  lib.rs  session.rs  transport.rs
crates/xenia-server-core/tests/: loopback.rs
crates/xenia-transport-ws/: Cargo.toml
crates/xenia-transport-ws/src/: lib.rs
crates/xenia-video/: Cargo.toml
crates/xenia-video/src/: h264.rs  hdc.rs  lib.rs  passthrough.rs
crates/xenia-viewer/: Cargo.toml
crates/xenia-viewer/src/: main.rs
docs/: ADR-002-library-licensing.md
