[workspace]
members = ["crates/xenia-server-core"]
resolver = "2"

[workspace.package]
version = "0.0.0-m0"
edition = "2021"
rust-version = "1.85"
authors = ["Tristan Stoltz <tristan.stoltz@evolvingresonantcocreationism.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Luminous-Dynamics/xenia-server"
homepage = "https://github.com/Luminous-Dynamics/xenia-server"

[workspace.dependencies]
xenia-wire = "0.2.0-alpha.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
thiserror = "1"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "deny"
