[package]
name = "xenia-viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "AGPL-3.0-or-later"
description = "Native viewer for Xenia sessions. Connects to an xenia-peer daemon, decodes sealed frames, renders. Pre-alpha stub — M4 adds the egui GUI."
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
xenia-peer-core = { path = "../xenia-peer-core" }
xenia-capture = { path = "../xenia-capture" }
xenia-video = { path = "../xenia-video" }
xenia-transport-ws = { path = "../xenia-transport-ws" }
xenia-wire = { workspace = true, features = ["consent", "reference-frame"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror.workspace = true
# GUI (always-on; the binary keeps a CLI path that skips the event
# loop, so the eframe dep cost is compile-time only).
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"

[features]
# Pass-through: rebuild xenia-video with the h264 feature so the
# viewer can decode `--codec h264` streams.
h264 = ["xenia-video/h264"]
# HDC hybrid codec (pure Rust, grayscale output).
hdc = ["xenia-video/hdc"]
